test/bad/21_5_spectest_bad.fsf
type notbad5 = Bad5
type notbad5’ = Bad5

